--- a/Baladas/src/main/res/menu/main.xml
+++ b/Baladas/src/main/res/menu/main.xml
@@ -3,4 +3,24 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+
+    <item android:id="@+id/pesquisar"
+        android:icon="@drawable/ic_action_search"
+        android:orderInCategory="1"
+        android:title="@string/pesquisar"
+        android:showAsAction="always" />
+
+    <item android:id="@+id/mapa"
+        android:icon="@drawable/ic_action_map"
+        android:orderInCategory="2"
+        android:title="@string/locAtual"
+        android:showAsAction="always" />
+
+    <item android:id="@+id/favorito"
+        android:icon="@drawable/ic_action_favorite"
+        android:orderInCategory="3"
+        android:title="@string/baladasFavoritas"
+        android:showAsAction="always" />
+
+
 </menu>
